add swag endpoint && fixes
