# docs/swagger.json
@@ -78,8 +78,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "alpinists",
-                    "expeditions"
+                    "alpinists"
                 ],
                 "summary": "adds the alpinist",
                 "responses": {
@@ -125,9 +124,9 @@
                 }
             }
         },
-        "/alpinist/expedition": {
+        "/alpinist/expedition/{id}": {
             "post": {
-                "description": "creates expedition and adds an alpinist to",
+                "description": "creates expedition and/or adds an alpinist to",
                 "consumes": [
                     "application/json"
                 ],
@@ -139,12 +138,18 @@
                     "expeditions"
                 ],
                 "summary": "adds an alpinist to expedition",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "alpinists id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "json"
-                        }
+                    "204": {
+                        "description": "No Content"
                     },
                     "400": {
                         "description": "Bad Request",
@@ -313,9 +318,9 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "alpinists id",
+                        "description": "id",
                         "name": "id",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -713,7 +718,7 @@
                 }
             }
         },
-        "/expedition/filter/{status}": {
+        "/expedition/filter/": {
             "get": {
                 "description": "returns the page with an expeditions that had been filtered by a status or/and formed time",
                 "produces": [
@@ -792,9 +797,9 @@
                 }
             }
         },
-        "/expedition/status/user/{id}": {
+        "/expedition/status/form/{id}": {
             "put": {
-                "description": "changes an expedition status with that one witch can be changed by a user",
+                "description": "changes an expedition status to formed",
                 "consumes": [
                     "application/json"
                 ],
@@ -802,6 +807,15 @@
                     "expeditions"
                 ],
                 "summary": "changes an expedition status",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "expedition id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "204": {
                         "description": "No Content"
@@ -954,7 +968,7 @@
                         "type": "integer",
                         "description": "expedition id",
                         "name": "id",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -1009,7 +1023,7 @@
         },
         "/expedition/{id}/status": {
             "put": {
-                "description": "changes an expedition status with that one witch can be changed by a moderator",
+                "description": "changes an expedition status with that one witch can be changed by a moderator (deleted or canceled)",
                 "consumes": [
                     "application/json"
                 ],
@@ -1017,6 +1031,29 @@
                     "expeditions"
                 ],
                 "summary": "changes an expedition status",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "expedition id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "expedition status",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "status": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                ],
                 "responses": {
                     "204": {
                         "description": "No Content"
